frontend/src/Manager/MenuItems.css
.manager-menu-items {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    align-items: center;
}
  .large-text .manager-menu-items, .large-text .h2, .large-text .left-panel, .large-text .right-panel, .large-text .selected {
    font-size: 30px;
  }

.left-panel {
    width: 45%;
}

.right-panel {
    width: 45%;
}

h2 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

table {
    width: 100%;
    border-collapse: collapse;
}

th, td {
    padding: 0.5rem;
    border-bottom: 1px solid #ccc;
    text-align: left;
}

tr:hover {
    background-color: #f5f5f5;
}

.selected {
    background-color: #cce5ff;
}

.button-panel {
    margin-top: 1rem;
    margin-bottom: 75px;
}

button {
    padding: 0.5rem 1rem;
    margin-right: 0.5rem;
    font-size: 1rem;
    cursor: pointer;
    background-color: #007bff;
    color: #fff;
    border: none;
    border-radius: 4px;
}

button:hover {
    background-color: #0056b3;
}

button:disabled {
    background-color: #ccc;
    cursor: not-allowed;
}

.right-panel ul {
    list-style-type: none;
    padding: 0;
}

.right-panel li {
    margin-bottom: 0.5rem;
}

.right-panel label {
    display: block;
    margin-bottom: 0.5rem;
}

.right-panel input {
    width: 100%;
    padding: 0.5rem;
    font-size: 1rem;
    margin-bottom: 1rem;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.right-panel input:disabled {
    background-color: #f5f5f5;
    cursor: not-allowed;
}

